at the cost of clarity of file dependencies.  Recall that Isabelle/ML
files exclusively use the .ML extension.  Minor INCOMPATIBILTY.


*** Pure ***

* Interpretation command 'interpret' accepts a list of equations like
'interpretation' does.

* Diagnostic command 'print_interps' prints interpretations in proofs
in addition to interpretations in theories.


*** HOL ***

* Dropped type classes mult_mono and mult_mono1.  INCOMPATIBILITY.

* Theory SetsAndFunctions has been split into Function_Algebras and Set_Algebras;
canonical names for instance definitions for functions; various improvements.
INCOMPATIBILITY.

* Records: logical foundation type for records do not carry a '_type' suffix
any longer.  INCOMPATIBILITY.

* Code generation for records: more idiomatic representation of record types.
Warning: records are not covered by ancient SML code generation any longer.
INCOMPATIBILITY.  In cases of need, a suitable rep_datatype declaration
helps to succeed then:

  record 'a foo = ...
  ...
  rep_datatype foo_ext ...

* Session Imperative_HOL: revamped, corrected dozens of inadequacies.
INCOMPATIBILITY.

* Quickcheck in locales considers interpretations of that locale for
counter example search.

* Theory Library/Monad_Syntax provides do-syntax for monad types.  Syntax
in Library/State_Monad has been changed to avoid ambiguities.
INCOMPATIBILITY.

* Code generator: export_code without explicit file declaration prints
to standard output.  INCOMPATIBILITY.

* Abolished symbol type names:  "prod" and "sum" replace "*" and "+"
respectively.  INCOMPATIBILITY.

* Constant "split" has been merged with constant "prod_case";  names
of ML functions, facts etc. involving split have been retained so far,
though.  INCOMPATIBILITY.

* Dropped old infix syntax "mem" for List.member;  use "in set"
instead.  INCOMPATIBILITY.

* Refactoring of code-generation specific operations in List.thy

  constants
    null ~> List.null

  facts
    mem_iff ~> member_def